--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@payos/node": "^1.0.6",
         "bcryptjs": "^2.4.3",
         "config": "^3.3.9",
         "cookie-parser": "^1.4.6",
@@ -22,9 +23,11 @@
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
         "mongoose": "^6.9.2",
+        "ngrok": "^5.0.0-beta.2",
         "nodemon": "^2.0.20",
         "request": "^2.88.2",
-        "slugify": "^1.6.6"
+        "slugify": "^1.6.6",
+        "socket.io": "^4.0.0"
     },
     "devDependencies": {
         "compression": "^1.7.4",
