--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
         "moment": "^2.29.4",
         "mongoose": "^6.9.2",
         "nodemon": "^2.0.20",
+        "primus": "^8.0.9",
         "request": "^2.88.2",
-        "slugify": "^1.6.6"
+        "slugify": "^1.6.6",
+        "socket.io": "^4.7.5"
     },
     "devDependencies": {
         "compression": "^1.7.4",
