--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "moment": "^2.29.4",
         "mongoose": "^6.9.2",
         "ngrok": "^5.0.0-beta.2",
+        "node-localstorage": "^3.0.5",
         "nodemailer": "^6.9.13",
         "nodemon": "^2.0.20",
         "primus": "^8.0.9",
