--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.18.2",
         "express-session": "^1.18.0",
         "jquery": "^3.7.1",
+        "js-cookie": "^3.0.5",
         "jsonwebtoken": "^9.0.0",
         "lodash": "^4.17.21",
         "moment": "^2.29.4",
