--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "express-session": "^1.18.0",
+        "fuse.js": "^7.0.0",
         "jquery": "^3.7.1",
         "js-cookie": "^3.0.5",
         "jsonwebtoken": "^9.0.0",
