--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
+    "email-verifier": "^0.4.1",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
     "fuse.js": "^7.0.0",
